# NHF2

./: README.md
Kesz/: CMakeLists.txt  Doxyfile  Makefile  NHF4.doc  NHF_test.cpp  NHF_test.h  cross_platform.h  duma_latin.h  duma_u8.h  gen_array3.hpp  gen_array3_main.cpp  kesz.cbp  kesz.vcproj  standard_input.txt
Kesz/algorithm/: algorithm.cpp  algorithm.h
Kesz/edge/: edge.cpp  edge.h
Kesz/graph/: graph.cpp  graph.h
Kesz/helper/: vector.cpp  vector.h
Kesz/node/: node.cpp  node.h
Skeleton/: README.md  gen_array3.cbp  gen_array3.hpp  gen_array3_main.cpp
Specifikacio/: NHF1.doc  README.md  ~$NHF1.doc
Terv/: README.md
